# PDBPC

./: .travis.yml  CMakeLists.txt  README.md  codecov.yaml  example.cpp  testCoverage.sh
docs/: index.md
examples/: example.cpp
pdbpc/include/pdbpc/: ParsedPDB.h  ParserSettings.h  pdbpc.h
pdbpc/include/pdbpc/Parser/: parseAtomLine.h  parseEndModelLine.h  parseMasterEndLine.h  parseModelLine.h  readPDBLine.h
pdbpc/include/pdbpc/Parser/PostProcessing/: modelPostProcessing.h  pedanticVerifications.h  postProcessParsedPDB.h
pdbpc/include/pdbpc/Records/: Atom.h  Chain.h  Heterogen.h  Model.h  OutOfBandRecord.h  Residue.h
pdbpc/include/pdbpc/Utility/: LogPrettyPrint.h  internalUtils.h  readPDBBlock.h  readPDBFile.h
pdbpc/src/: ParsedPDB.cpp  ParserSettings.cpp
pdbpc/src/Parser/: parseAtomLine.cpp  parseEndModelLine.cpp  parseHeaderLine.cpp  parseHeaderLine.h  parseHetRelatedLines.cpp  parseHetRelatedLines.h  parseMasterEndLine.cpp  parseModelLine.cpp  readPDBLine.cpp
pdbpc/src/Parser/PostProcessing/: modelPostProcessing.cpp  pedanticVerifications.cpp  pedanticVerifications.h  postProcessParsedPDB.cpp  postProcessParsedPDB.h
pdbpc/src/Records/: Atom.cpp  Chain.cpp  Heterogen.cpp  Model.cpp  OutOfBandRecord.cpp  Residue.cpp
pdbpc/src/Utility/: internalUtils.cpp  internalUtils.h  readPDBBlock.cpp  readPDBFile.cpp
pdbpc/test/: AltLocationHandling_TestSuite.cpp  InternalUtils_TestSuite.cpp  Line-ATOM_TestSuite.cpp  Line-HEADER_TestSuite.cpp  Line-HET-etAl_TestSuite.cpp  Line-MASTER_END_TestSuite.cpp  Line-MODEL_TestSuite.cpp  MainTestSuite.cpp  Main_TestSuite.cpp  ParserSettings_TestSuite.cpp  PedanticVerif_TestSuite.cpp  PostProcess-Residue_TestSuite.cpp  Records_TestSuite.cpp  line-ENDMDL_TestSuite.cpp  simplePDBFixture.h
